# whisper_network

./: AUDIT_AND_ROADMAP.md  CHANGELOG_MULTILINGUAL.md  DAT.md  DEBUG_GUIDE.md  DEPLOYMENT_RECOMMENDATIONS.md  FILE_SUPPORT.md  GUIDE_RH_ANONYMIZATION.md  GUIDE_UTILISATION.md  GUIDE_UTILISATION_TEXTE.md  INSTRUCTIONS_DEPLOIEMENT.md  LICENSE  MIGRATION_GUIDE.md  MULTILINGUAL_SUPPORT.md  NOUVELLE_INTERFACE.md  PHONE_IMPROVEMENTS.md  RACCOURCI_CTRL_I.md  README.md  README_IMPROVEMENTS.md  ROADMAP.md  SCRIPT_DEMO.md
whisper_network/: .dockerignore  .env.example  .gitignore  AUTHORS  CHANGELOG.md  CHANGELOG_SECURITY.md  DEPLOY.md  Dockerfile  FORMAT_PRESERVATION.md  LICENSE  README.md  SECURITY.md  config.toml  debug_detections.py  deploy.bat  deploy.sh  docker-compose-whisper.yml  docker-compose.yml  docker-run.bat  docker-run.sh  init.sql  main.py  pyproject.toml  quick_test.py  requirements.txt  test_api.py  test_config.anonymized.yaml  test_config.yaml  test_doc.anonymized.md  test_doc.md  test_format.txt  test_formatage.sh  test_newlines.py  test_phone_formats.py  test_rh_patterns.py  test_sample.anonymized.txt  test_sample.txt  test_script.anonymized.py  test_script.py  test_security.sh  (+2 more)
whisper_network/.github/: copilot-instructions.md
whisper_network/docs/: metrics.json
whisper_network/test-office-files/: docx_output.txt  test_calc.anonymized.ods  test_calc.ods  test_document.docx  test_spreadsheet.anonymized.xlsx  test_spreadsheet.xlsx  test_writer.anonymized.odt  test_writer.odt
whisper_network/test-rich-formats/: test_document.anonymized.rtf  test_document.rtf  test_output.txt
whisper_network/tests/: __init__.py  test_main.py
whisper_network/tests/integration/: __init__.py  test_complete.py  (+4 more)
whisper_network/whisper_network/: __init__.py  anonymizers.py  cache_manager.py  database.py  fast_anonymizer.py  file_handler.py  models.py  patch_script.py  session_manager.py
(+60 files in other folders)
