[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-network"
version = "1.0.0"
description = "High-performance text anonymization API for browser extensions"
authors = [
    { name = "Sylvain JOLY, NANO by NXO", email = "sylvain.joly@whisper-network.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["anonymization", "privacy", "fastapi", "browser-extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/whisper-network"
Documentation = "https://github.com/yourusername/whisper-network#readme"
Repository = "https://github.com/yourusername/whisper-network.git"
"Bug Tracker" = "https://github.com/yourusername/whisper-network/issues"

[project.scripts]
whisper-network = "whisper_network.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true